--- a/index.html
+++ b/index.html
@@ -77,61 +77,323 @@
             </div>
         </div>
     </div>
-    <div class="doctor-find-main-div">
+    <div class=" container-md doctor-find-main-div">
         <div class="find-a-doctor">
             <h1>Find A Doctor</h1>
 
             <div class="find-a-doctor-form">
-                
-                    <input class="doctor-name" type="text" placeholder="Name">
-                    <input type="text" placeholder="Speciality">
-                    <div>
-                        <label for="available">Available</label>
+
+                <input class="doctor-name" type="text" placeholder="Name">
+                <input type="text" placeholder="Speciality">
+                <div>
+                    <label for="available">Available</label>
                     <button class="btn btn-primary" type="submit" id="available">Available</button>
-                    </div>
+                </div>
                 <button type="button" class="btn btn-success btn-lg">Search</button>
             </div>
         </div>
     </div>
-    <div class="our-result">
-        <div class="our-result-heading"><h2>Our results in numbers</h2></div>
+    <div class="our-result container-md">
+        <div class="our-result-heading">
+            <h2>Our results in numbers</h2>
+        </div>
         <div class="container text-center">
             <div class="row align-items-center">
-              <div class="col customer ">
-                <h1>99%</h1>
-                <h5>Customer satisfaction</h5>
-              </div>
-              <div class="col customer ">
-                <h1>15k</h1>
-                <h5>Online Patients</h5>
-              </div>
-              <div class="col customer">
-                <h1>12k</h1>
-                <h5>Patient Recovered</h5>
-              </div>
-              <div class="col customer">
-                <h1>240%</h1>
-                <h5>Company growth </h5>
-              </div>
+                <div class="col customer ">
+                    <h1>99%</h1>
+                    <h5>Customer satisfaction</h5>
+                </div>
+                <div class="col customer ">
+                    <h1>15k</h1>
+                    <h5>Online Patients</h5>
+                </div>
+                <div class="col customer">
+                    <h1>12k</h1>
+                    <h5>Patient Recovered</h5>
+                </div>
+                <div class="col customer">
+                    <h1>240%</h1>
+                    <h5>Company growth </h5>
+                </div>
             </div>
-          </div>
+        </div>
     </div>
     <div class="container container-md text-center reasons-contant-main-div ">
         <div class="row">
-          <div class="col lot-of-reason">
-            <h1>You have lots of reasons to choose us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit nullam.</p>
-            <div>
-            <button type="button" class="btn btn-success my-btn">Get Started</button>
-            <button type="button" class="btn btn-outline-secondary my-btn-one">Talk to sales</button>
-          </div>
-          </div>
-          <div class="col">
-            <img src="./images/Container.png" alt="Opreation Photo">
-          </div>
-         
+            <div class="col lot-of-reason">
+                <h1>You have lots of reasons to choose us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit phasellus mollis sit aliquam sit
+                    nullam.</p>
+                <div>
+                    <button type="button" class="btn btn-success my-btn">Get Started</button>
+                    <button type="button" class="btn btn-outline-secondary my-btn-one">Talk to sales</button>
+                </div>
+            </div>
+            <div class="col">
+                <img src="./images/Container.png" alt="Opreation Photo">
+            </div>
+
         </div>
-      </div>
+    </div>
+
+    <div class="container-md">
+        <div class="service-we-provide">
+            <h1>Service We Provide</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum tempus hac tellus libero
+                accumsan. </p>
+        </div>
+        <div class="card-section">
+            <div class="card-main">
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Dental treatments</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel
+                            facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn ">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container (1).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Bones treatments</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn ">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container (2).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Diagnosis</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper
+                            dalaracc lacus vel facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <div class="card-main">
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container (3).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Cardiology</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel
+                            facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn ">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container (4).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Surgery</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn ">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="card card-main-one" style="width: 18rem;">
+                    <img src="./images/Container (5).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Eye care</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper
+                            dalaracc lacus vel facilisis volutpat est velitolm.</p>
+                        <a href="#" class="btn">learn more <i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <div class="container-md">
+        <div class="service-we-provide">
+            <h1>Meet our team members</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum tempus hac tellus libero
+                accumsan. </p>
+        </div>
+        <div class="card-section">
+            <div class="card-main">
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">John Carter</h5>
+                        <h6>CEO & Co-Founder</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel
+                            facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG (1).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Sophie Moore</h5>
+                        <h6>dental specialist</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG (2).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Matt Cannon</h5>
+                        <h6>orthopedic</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper
+                            dalaracc lacus vel facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <div class="card-main">
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG (3).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Andy Smith</h5>
+                        <h6>brain surgeon</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel
+                            facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG (4).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Lily Woods</h5>
+                        <p>heart specialist</p>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag" style="width: 18rem;">
+                    <img src="./images/BG (5).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Patrick Meyer</h5>
+                        <h6>eye specialist</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper
+                            dalaracc lacus vel facilisis volutpat est velitolm.</p>
+                        <div class="social-mida-link">
+                            <a class="btn" href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a class="btn" href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="container-md">
+        <div class="service-we-provide">
+            <h1>Testimonial</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum tempus hac tellus libero
+                accumsan. </p>
+        </div>
+        <div class="card-section">
+            <div class="card-main">
+                <div class="card card-main-one bg-imag-1" style="width: 18rem;">
+                    <img src="./images/BG (6).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+
+                        <h6>“One of a kind service”</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel
+                            facilisis volutpat est velitolm.
+                        </p>
+                        <h5 class="card-title">John Carter</h5>
+                        <h4>CEO at Google</h4>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag-1" style="width: 18rem;">
+                    <img src="./images/BG (7).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+
+                        <h6>“One of a kind service”</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper dalaracc
+                            lacus vel facilisis volutpat est velitolm.</p>
+                        <h5 class="card-title">ophie Moore</h5>
+                        <h4>MD at Facebook</h4>
+                    </div>
+                </div>
+                <div class="card card-main-one bg-imag-1" style="width: 18rem;">
+                    <img src="./images/BG (8).png" class="card-img-top" alt="...">
+                    <div class="card-body">
+
+                        <h6>“One of a kind service”</h6>
+                        <p class="card-text">Lorem ipsum dolor sit amet consecte tur adipiscing elit semper
+                            dalaracc lacus vel facilisis volutpat est velitolm.</p>
+                        <h5 class="card-title">Andy Smith</h5>
+                        <h4>CEO Dot Austere</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="trust-1000-main container-md">
+        <div class="trust-1000-heading">
+            <h1>Trusted by 10,000+ companies around the world</h1>
+        </div>
+        <div class="trust-1000-logos">
+            <img src="./images/Google.png" alt="">
+            <img src="./images/Facebook.png" alt="">
+            <img src="./images/YouTube.png" alt="">
+            <img src="./images/Pinterest.png" alt="">
+            <img src="./images/Twitch.png" alt="">
+            <img src="./images/Webflow.png" alt="">
+        </div>
+        <div class="trust-1000-dots">
+            <img src="./images/Dot.png" alt="">
+            <img src="./images/Dot (1).png" alt="">
+            <img src="./images/Dot (2).png" alt="">
+        </div>
+    </div>
+
 </body>
 
 </html>
