main page compelet

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         </div>
 
         <div class="doctor-image">
+            <div class="doctor-image-ten" > 
+                <img src="./images/image 17.svg" alt="">
+            </div>
             <div class="littel-image">
                 <div class="our-profinal">
                     <p>Our Professionals</p>
@@ -392,6 +395,57 @@
             <img src="./images/Dot (1).png" alt="">
             <img src="./images/Dot (2).png" alt="">
         </div>
+    </div>
+
+    <div class="container-md newsletter">
+        <h3>Subscribe to our newsletter</h3>
+        <form class="news-letter-form">
+            <input class="news-letter-input" type="email" placeholder="Enter Your Email">
+            <button type="button" class="btn btn-newsletter"> Subscribe </button>
+        </form>
+    </div>
+
+
+    <div class=" footer-contant">
+        <div class="container text-center">
+            <div class="row align-items-center">
+              <div class="col footer-product">
+                <h3> <img src="./images/image 16.png" alt=""> healthcare</h3>
+                <p>Copyright © 2022 BRIX Templates | All Rights Reserved </p>
+              </div>
+              <div class="col footer-product">
+                <h6>Product</h6>
+                <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Case studies</li>
+                    <li>Reviews</li>
+                    <li>Updates</li>
+                </ul>
+              </div>
+              <div class="col footer-product">
+                <h6>Company</h6>
+                <ul>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Careers</li>
+                    <li>Culture</li>
+                    <li>Blog</li>
+                </ul>
+              </div>
+              <div class="col footer-product">
+                <h6>Support</h6>
+                <ul>
+                    <li>Getting started</li>
+                    <li>Help center</li>
+                    <li>Server status</li>
+                    <li>Report a bug</li>
+                    <li>Report a bug</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
     </div>
 
 </body>
