Service page add

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown ">
                 <ul class="navbar-nav ms-auto me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Service</a>
+                        <a class="nav-link" href="./service.html">Service</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
@@ -121,6 +121,7 @@
             </div>
         </div>
     </div>
+
     <div class="container container-md text-center reasons-contant-main-div ">
         <div class="row">
             <div class="col lot-of-reason">
@@ -145,6 +146,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar elementum tempus hac tellus libero
                 accumsan. </p>
         </div>
+        
         <div class="card-section">
             <div class="card-main">
                 <div class="card card-main-one" style="width: 18rem;">
