--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Service</a>
+                            <a class="nav-link" href="./service.html">Service</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact Us</a>
@@ -41,32 +41,67 @@
             </div>
         </nav>
 
+        <div class="hero-page-3"></div>
 
+        <div class="get-in-touch">
+            <h6>Get In Touch</h6>
+            <h1>Contact Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+            <form class="main-form">
+                <div class="form-div-1">
+                    <label for="first-name">First Name</label><br>
+                    <input type="text" id="first-name" placeholder="Enter your first name">
+                </div>
 
-        <div class="meet-the-best-hospital"></div>
+                <div class="form-div-1">
+                    <label for="last-name">Last Name</label><br>
+                    <input type="text" id="last-name" placeholder="Enter your last name">
+                </div>
+            </form>
+            <form class="main-form">
+                <div class="form-div-1">
+                    <label for="email">Email</label><br>
+                    <input type="email" id="email" placeholder="Enter your email">
+                </div>
 
+                <div class="form-div-1">
+                    <label for="number">Phone number</label><br>
+                    <input type="number" id="number" placeholder="Enter your phone number">
+                </div>
+            </form>
+            <form class="main-form">
+                <div class="form-div-1">
+                    <label for="email">Email</label><br>
+                    <input type="email" id="email" placeholder="Enter your email">
+                </div>
 
-        <div class="container-get-in-touch">
-            <div class="get-in-touch-contact-us">
-                <h6>Get In Touch</h6>
-                <h1>Contact Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                <div class="form-div-1">
+                    <label for="number">Phone number</label><br>
+                    <input type="number" id="number" placeholder="Enter your phone number">
+                </div>
+            </form>
+
+            <form class="main-form">
+                <div class="form-div-2">
+                    <label for="choose">Choose a topic</label><br>
+                    <input type="text" id="choose" placeholder="Choose a topic">
+                </div>
+
+            </form>
+
+            <div class="form-div-2">
+                <label for="massage"> Massage</label> <br>
+                <textarea name="" id="massage" cols="90" rows="5">
+                    Type your message...
+                </textarea>
             </div>
 
-            <div class="get-in-touch-form">
-                <label for="first-name"></label>
-                <input type="text" placeholder="Enter your first name" id="first-name>
-
-                <label for="last-name"></label>
-                <input type="text" placeholder="Enter your last name" id="last-name>
-            </div>
-
-
-
+            <form>
+                <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+                <label for="vehicle1"> I accept the terms</label>
+              </form>
         </div>
 
-
-        
     </div>
 </body>
 </html>
