--- a/service.html
+++ b/service.html
@@ -241,9 +241,9 @@
             <h1>FAQ</h1>
             <p>Problems trying to resolve the conflict between
                 the two major realms of Classical physics: Newtonian mechanics </p>
-            <div class="row mt-5">
+            <div class=" row mt-5 ">
                 <div class="col me-1">
-                    <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem, faq-arrow">
                         <div class="charven">
                             <img src="./images/icn arrow-right icn-xs.png" alt="">
                         </div>
@@ -258,8 +258,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem">
+                        <div class="card" style="width: 18rem faq-arrow">
                             <div class="charven">
                                 <img src="./images/icn arrow-right icn-xs.png" alt="">
                             </div>
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem, faq-arrow">
                         <div class="charven">
                             <img src="./images/icn arrow-right icn-xs.png" alt="">
                         </div>
@@ -290,7 +290,7 @@
             </div>
             <div class="row mt-5">
                 <div class="col">
-                    <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem, faq-arrow">
                         <div class="charven">
                             <img src="./images/icn arrow-right icn-xs.png" alt="">
                         </div>
@@ -304,7 +304,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem, faq-arrow">
                         <div class="charven">
                             <img src="./images/icn arrow-right icn-xs.png" alt="">
                         </div>
@@ -318,7 +318,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" style="width: 18rem; faq-arrow">
+                    <div class="card" style="width: 18rem, faq-arrow">
                         <div class="charven">
                             <img src="./images/icn arrow-right icn-xs.png" alt="">
                         </div>
